--- a/index.html
+++ b/index.html
@@ -1201,7 +1201,7 @@
             <nav class="nav-bar">
 
                 <p class="logo" id="delete">
-                    Site Logo
+                    Amanuel Melkamu
                 </p>
 
              <ul class="menu" id="navMenu">
@@ -1386,7 +1386,7 @@
          <footer class="footer">
             <div class="footer-navbar">
 
-                <p class="logoname">LOGO NAME</p>
+                <p class="logoname">Amanuel Melkamu</p>
 
                 <ul>
                     <li>HOME</li>
