--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <title>Portfolio Website</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&family=Poppins:wght@200;300;600;700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;600;700&display=swap" rel="stylesheet">
 
 
@@ -81,8 +84,8 @@
 
             .logo{
                 color: white;
-                font-size: 16px;
-                font-family: 'Poppins', sans-serif;
+                font-size: 17px;
+                font-family: "Merienda";
             }
 
             .nav-bar ul li {
@@ -1201,7 +1204,7 @@
             <nav class="nav-bar">
 
                 <p class="logo" id="delete">
-                    Amanuel Melkamu
+                    Amanuel
                 </p>
 
              <ul class="menu" id="navMenu">
